--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     rel="stylesheet">
 
   <!-- Bootstrap css -->
-  <!-- <link rel="stylesheet" href="css/bootstrap.css"> -->
+  <link rel="stylesheet" href="css/bootstrap.css">
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Libraries CSS Files -->
@@ -35,18 +35,11 @@
 </head>
 
 <body>
-
   <header id="header" class="header header-hide">
     <div class="container">
-
-
-
-      <img src="img/Mtendere_logo.png" alt="Logo">
       <div id="logo" class="pull-left">
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="#body"><img src="img/logo.png" alt="" title="" /></a>-->
+        <a href="#body"><img src="img/Mtendere_logo.png" alt="" title="" /></a>
       </div>
-
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="#hero">Home</a></li>
@@ -68,6 +61,7 @@
           </li>
           <li><a href="#">Abroad Study</a>
             <ul>
+              <li><a href="#">India</a></li>
               <li><a href="#">Australia</a></li>
               <li><a href="#">USA</a></li>
               <li><a href="#">Canada</a></li>
@@ -76,7 +70,13 @@
               <li><a href="#">Switzerland</a></li>
             </ul>
           </li>
-          <li><a href="#">University</a></li>
+          <li><a href="#">University</a>
+            <ul>
+              <li><a href="#">Nepal</a></li>
+              <li><a href="#">Nepal</a></li>
+              <li><a href="#">Chandighai</a></li>
+            </ul>
+          </li>
           <li><a href="#">Contact Us</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
@@ -103,60 +103,42 @@
 
     <div class="container">
       <div class="section-title text-center">
-
-        <!--     <h2>our services </h2>-->
-
+        <h2>our services </h2>
       </div>
     </div>
-
     <div class="container">
       <div class="row">
-
         <div class="col-md-6 col-lg-4">
           <div class="feature-block">
-
             <h4>Abroad Study Counseling</h4>
             <p>With our one-to-one counseling, determine which course is apt for your career choice, which country is
               feasible as per your personal & financial constraints & which universities you can do best at. Our
               qualified counselors know best how to match your resources with your career aspirations.</p>
-
           </div>
         </div>
-
         <div class="col-md-6 col-lg-4">
           <div class="feature-block">
-
             <h4>Admission & Visa Assistance</h4>
             <p>Our partnership with foreign universities allows us to make available exclusive scholarships, error-free
               applications, timely correspondences & best possible results. Our students receive free visa counseling,
               visa file preparation & mock training from our experienced Visa counselors.
-
             </p>
-
           </div>
         </div>
-
         <div class="col-md-6 col-lg-4">
           <div class="feature-block">
             <h4>Financial Aid & Scholarship Guidance</h4>
             <p>Our exclusive sources keep updating scholarships as & when they become available. Ask us how to manage
               finances for education abroad. Be it your own money or a loan, our expert counselors will guide you how,
               where & when to get finances settled in the most convenient, timely & cost-effective way.</p>
-
           </div>
         </div>
-
       </div>
     </div>
-
   </section>
-
-
-
 
   <!--  Testimony Section -->
   <section id="screenshots" class="padd-section text-center wow fadeInUp">
-
     <div class="container">
       <div class="section-title text-center">
         <h2>Test Preparation</h2>
@@ -165,7 +147,6 @@
 
     <div class="container">
       <div class="owl-carousel owl-theme">
-
         <div><img src="img/ielts.jpg" alt="img"></div>
         <div><img src="img/toefl.jpg" alt="img"></div>
         <div><img src="img/sat.jpg" alt="img"></div>
@@ -245,44 +226,21 @@
       </div>
     </div>
   </section>
-
-
-
-
   <!-- END Video Section -->
-
-
 
   <!-- img section -->
 
-
-
-
-
-
   <!-- end img section -->
-
-
-
-
-
-
-
   <!-- Team Section -->
   <section id="team" class="padd-section text-center wow fadeInUp">
-
     <div class="container">
       <div class="section-title text-center">
-
         <h2>Team Member</h2>
         <p class="separator">Integer cursus bibendum augue ac cursus .</p>
-
       </div>
     </div>
-
     <div class="container">
       <div class="row">
-
         <div class="col-md-6 col-md-4 col-lg-3">
           <div class="team-block bottom">
             <img src="img/team/1.jpg" class="img-responsive" alt="img">
@@ -346,118 +304,80 @@
     </div>
   </section>
 
-
-
-
-
   <!--- Blog Section -->
-
-
 
   <!-- Newsletter Section -->
   <section id="newsletter" class="newsletter text-center wow fadeInUp">
     <div class="overlay padd-section">
       <div class="container">
-
         <div class="row justify-content-center">
           <div class="col-md-9 col-lg-6">
             <form class="form-inline" method="POST" action="#">
-
-
             </form>
-
           </div>
         </div>
-
         <ul class="list-unstyled">
           <li><a href="#"><i class="fa fa-facebook"></i></a></li>
           <li><a href="#"><i class="fa fa-twitter"></i></a></li>
           <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
           <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
         </ul>
-
-
       </div>
     </div>
   </section>
 
-
-
   <!-- image --->
   <div class="container">
-
     <h2 class="heading">Top Study Destination
     </h2>
-
     <div class="gallery">
-
       <div class="gallery-item">
         <img class="gallery-image" src="img/City/australia.jpg" alt="Australia">
       </div>
-
       <div class="gallery-item">
         <img class="gallery-image" src="img/City/Newzealand.jpg" alt="newzealand">
       </div>
-
       <div class="gallery-item">
         <img class="gallery-image" src="img/City/switzerland.jpg" alt="switzearland">
       </div>
-
       <div class="gallery-item">
         <img class="gallery-image" src="img/City/UK.jpg" alt="uk">
       </div>
-
       <div class="gallery-item">
         <img class="gallery-image" src="img/City/USA.jpg"
           alt="back view of woman wearing a backpack and beanie waiting to cross the road on a busy street at night in New York City, USA">
       </div>
-
       <div class="gallery-item">
         <img class="gallery-image" src="img/City/canada.jpg"
           alt="man wearing a black jacket, white shirt, blue jeans, and brown boots, playing a white electric guitar while sitting on an amp">
       </div>
-
     </div>
-
   </div>
-
-
-
   <!--- end image -->
-
 
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
       <div class="row">
-
         <div class="col-md-12 col-lg-4">
           <div class="footer-logo">
-
             <a class="navbar-brand" href="#" image src="img/logo.png"> <img src="img/logo.png" alt=""></a>
-
             <p>www.SkyEducationNepal.com<br>
               Dillibazar, Kathmandu, Nepal<br>
               +977-1-4439626, 4445059, 9818306105<br>
-
-
             </p>
-
           </div>
         </div>
 
         <div class="col-sm-6 col-md-3 col-lg-2">
           <div class="list-menu">
-
             <h4>Test preparation</h4>
-
             <ul class="list-unstyled">
               <li><a href="#">About us</a></li>
               <li><a href="#">Career Quiz</a></li>
               <li><a href="#">Universities</a></li>
               <li><a href="#">FAQs</a></li>
             </ul>
-
           </div>
         </div>
 
@@ -517,7 +437,7 @@
   <!-- Contact Form JavaScript File -->
   <script src="contactform/contactform.js"></script>
 
-  <!-- Template Main Javascript File -->
+  <!-- Main Javascript File -->
   <script src="js/main.js"></script>
 
 </body>
