--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
   </section><!-- #hero -->
 
   <!--Get Started Section-->
-  <section id="get-started" class="padd-section text-center wow fadeInUp">
-
+  <section id="get-started" class="padd-section text-center wow">
     <div class="container">
       <div class="section-title text-center">
         <h2>our services </h2>
