--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>First Step education Consultancy</title>
+  <title>MTENDERE education consultancy</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -96,10 +96,11 @@
         <a href="#"><i class="fa fa-windows fa-3x"></i> windows</a>
       </div>
     </div>
-  </section><!-- #hero -->
+  </section>
+  <!-- #hero -->
 
   <!--Get Started Section-->
-  <section id="get-started" class="padd-section text-center wow">
+  <section id="get-started" class="padd-section text-center">
     <div class="container">
       <div class="section-title text-center">
         <h2>our services </h2>
