--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <header id="header" class="header header-hide">
     <div class="container">
       <div id="logo" class="pull-left">
-        <a href="#body"><img src="img/Mtendere_logo.png" alt="" title="" /></a>
+        <a href="#body"><img src="img/Mtendere_logo.png" alt="placeholder" title="Mtendere_logo" /></a>
       </div>
       <nav id="nav-menu-container">
         <ul class="nav-menu">
