Nav pushed back right after Header section

--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
 
 <body>
   <header id="header" class="header header-hide">
-    <div class="container">
-      <div id="logo" class="pull-left">
-        <a href="#body"><img src="img/Mtendere_logo.png" alt="placeholder" title="Mtendere_logo" /></a>
-      </div>
-      <nav id="nav-menu-container">
+    <nav 
+id="nav-menu-container"></nav>
+      <div class="container">
+        <div id="logo" class="pull-left">
+          <a href="#body"><img src="img/Mtendere_logo.png" alt="placeholder" title="Mtendere_logo" /></a>
+        </div>
         <ul class="nav-menu">
           <li class="menu-active"><a href="#hero">Home</a></li>
           <li><a href="#about-us">About</a>
