--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
 </head>
 
 <body>
-  <header id="header" class="header header-hide">
-    <nav 
-id="nav-menu-container"></nav>
-      <div class="container">
-        <div id="logo" class="pull-left">
-          <a href="#body"><img src="img/Mtendere_logo.png" alt="placeholder" title="Mtendere_logo" /></a>
-        </div>
+  <header id="header" class="classeader header-hide">
+    <div class="container">
+      <div id="logo" class="pull-left">
+        <a href="#body"><img src="img/Mtendere_logo.png" alt="placeholder" title="Mtendere_logo" /></a>
+      </div>
+      <nav
+id="nav-menu-container"></
+nanav-menu-container
         <ul class="nav-menu">
           <li class="menu-active"><a href="#hero">Home</a></li>
           <li><a href="#about-us">About</a>
