Nav tripped - fixed

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
         <a href="#body"><img src="img/Mtendere_logo.png" alt="placeholder" title="Mtendere_logo" /></a>
       </div>
       <nav
-id="nav-menu-container"></
-nanav-menu-container
+id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="#hero">Home</a></li>
           <li><a href="#about-us">About</a>
