--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
   <header id="header" class="classeader header-hide">
     <div class="container">
-      <div id="logo" class="pull-left">
+      <div class="logo" class="pull-left">
         <a href="#body"><img src="img/Mtendere_logo.png" alt="placeholder" title="Mtendere_logo" /></a>
       </div>
       <nav
