--- a/index.html
+++ b/index.html
@@ -355,71 +355,76 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 col-lg-4">
-          <div class="footer-logo">
-            <a class="navbar-brand" href="#" image src="img/logo.png"> <img src="img/logo.png" alt=""></a>
-            <p>www.SkyEducationNepal.com<br>
-              Dillibazar, Kathmandu, Nepal<br>
-              +977-1-4439626, 4445059, 9818306105<br>
-            </p>
-          </div>
-        </div>
-
-        <div class="col-sm-6 col-md-3 col-lg-2">
-          <div class="list-menu">
-            <h4>Test preparation</h4>
-            <ul class="list-unstyled">
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Career Quiz</a></li>
-              <li><a href="#">Universities</a></li>
-              <li><a href="#">FAQs</a></li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="col-sm-6 col-md-3 col-lg-2">
-          <div class="list-menu">
-            <h4>Test preparation</h4>
-            <ul class="list-unstyled">
-              <li><a href="#">IELTS</a></li>
-              <li><a href="#">TOELF</a></li>
-              <li><a href="#">SAT</a></li>
-              <li><a href="#">GRE</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-2">
-          <div class="list-menu">
-            <h4>Top Study destination</h4>
-            <ul class="list-unstyled">
-              <li><a href="#"><b>Top Study destination</b></a></li>
-              <li><a href="#">Australia</a></li>
-              <li><a href="#">NEW ZEALAND</a></li>
-              <li><a href="#">UNITED KINGDOM</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3 col-lg-2">
-          <div class="list-menu">
-            <h4>Follow me</h4>
-            <ul class="list-unstyled">
-              <li><a href="#">Kathmandu, Nepal</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="copyrights">
       <div class="container">
-        <p>&copy; Copyrights 2020. All rights reserved.</p>
-        <div class="credits"> Designed by <a href="https://FSEC.com/"> © First Step Education ConsultancyPvt. Ltd.</a>
+        <div class="row">
+          <div class="col-md-12 col-lg-4">
+            <div class="footer-logo">
+              <a class="navbar-brand" href="#" image src="img/Mtendere-logo"> <img src="img/logo.png" alt=""></a>
+              <p>www.mec.edu<br>
+                Mtendre Education Consult, Babaje Huse<br>
+                Off Mandala Road Area 3, Behind NBs<br>
+                1st Floor Room 1, Lilongwe<br>
+                +265 999 360 325, 265 887 209 531<br>
+              </p>
+            </div>
+          </div>
+  
+          <div class="col-sm-6 col-md-3 col-lg-2">
+            <div class="list-menu">
+              <h4>Services</h4>
+              <ul class="list-unstyled">
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Career Guide</a></li>
+                <li><a href="#">Admission process</a></li>
+                <li><a href="#">Scholarship</a></li>
+                <li><a href="#">Contact us</a></li>
+                <li><a href="#">Programs to Study</a></li>
+                <li><a href="#">FAQs</a></li>
+              </ul>
+            </div>
+          </div>
+  
+          <div class="col-sm-6 col-md-3 col-lg-2">
+            <div class="list-menu">
+              <h4>Test preparation</h4>
+              <ul class="list-unstyled">
+                <li><a href="#">IELTS</a></li>
+                <li><a href="#">TOELF</a></li>
+                <li><a href="#">SAT</a></li>
+                <li><a href="#">GRE</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-2">
+            <div class="list-menu">
+              <h4>Top Study destination</h4>
+              <ul class="list-unstyled">
+                <li><a href="#"><b>Top Study destination</b></a></li>
+                <li><a href="#">India</a></li>
+                <li><a href="#">Italy</a></li>
+                <li><a href="#">Malaysia</a></li>
+                <li><a href="#">Malta</a></li>
+                <li><a href="#">Usa</a></li>
+                <div class="btn">More</div>
+              </ul>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-2">
+            <div class="list-menu">
+              <h4>Follow Us</h4>
+              <ul class="list-unstyled">
+                <li><a href="#">Lilongwe, Malawi</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
+      <div class="copyrights">
+        <div class="container">
+          <p>&copy; Copyrights 2025 @Mtendere. All rights reserved.</<p>
+        </div>
+       </div>
   </footer>
-
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
   <!-- JavaScript Libraries -->
