--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
   <header id="header" class="classeader header-hide">
     <div class="container">
-      <div class="logo" class="pull-left">
+      <div class="navbar-brand">
         <a href="#body"><img src="img/Mtendere_logo.png" alt="placeholder" title="Mtendere_logo" /></a>
       </div>
       <nav id="nav-menu-container">
@@ -359,7 +359,7 @@
         <div class="row">
           <div class="col-md-12 col-lg-4">
             <div class="footer-logo">
-              <a class="navbar-brand" href="#" image src="img/Mtendere-logo"> <img src="img/logo.png" alt=""></a>
+              <a class="navbar-brand" href="#" image src="img/Mtendere_Logo"></a>
               <p>www.mec.edu<br>
                 Mtendre Education Consult, Babaje Huse<br>
                 Off Mandala Road Area 3, Behind NBs<br>
