--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
   <header id="header" class="classeader header-hide">
     <div class="container">
-      <div class="navbar-brand">
+      <div class="navbar-brand" style="background-color: darkred;">
         <a href="#body"><img src="img/Mtendere_logo.png" alt="placeholder" title="Mtendere_logo" /></a>
       </div>
       <nav id="nav-menu-container">
