--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 
 <head>
   <meta charset="utf-8">
@@ -35,7 +35,7 @@
 <body>
   <header id="header" class="classeader header-hide">
     <div class="container">
-      <div class="navbar-brand" style="background-color: darkred;">
+      <div class="navbar-brand" style="background-color: rgb(27, 4, 161);">
         <a href="#body"><img src="img/Mtendere_logo.png" alt="placeholder" title="Mtendere_logo" /></a>
       </div>
       <nav id="nav-menu-container">
