--- a/index.html
+++ b/index.html
@@ -230,77 +230,79 @@
 
   <!-- end img section -->
   <!-- Team Section -->
-  <section id="team" class="padd-section text-center wow fadeInUp">
-    <div class="container">
-      <div class="section-title text-center">
-        <h2>Team Member</h2>
-        <p class="separator">Integer cursus bibendum augue ac cursus .</p>
+  <!-- Team Start -->
+  <div class="container-fluid py-5">
+      <div class="container py-5">
+          <h1 class="display-4 text-uppercase text-center mb-5">Meet Our Team</h1>
+          <div class="owl-carousel team-carousel position-relative" style="padding-left: 30px;">
+              <div class="team-item rounded overflow-hidden">
+                  <div class="position-relative">
+                      <img class="img-fluid w-100" src="img/team-1.jpg" alt="">
+                      <div class="team-overlay">
+                          <div class="d-flex align-items-center justify-content-start">
+                              <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
+                              <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
+                              <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="bg-light text-center p-4">
+                      <h4 class="text-uppercase">John Doe</h4>
+                      <p class="m-0">CEO, Founder</p>
+                  </div>
+              </div>
+              <div class="team-item rounded overflow-hidden">
+                  <div class="position-relative">
+                      <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
+                      <div class="team-overlay">
+                          <div class="d-flex align-items-center justify-content-start">
+                              <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
+                              <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
+                              <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="bg-light text-center p-4">
+                      <h4 class="text-uppercase">Kate Wilson</h4>
+                      <p class="m-0">Designer</p>
+                  </div>
+              </div>
+              <div class="team-item rounded overflow-hidden">
+                  <div class="position-relative">
+                      <img class="img-fluid w-100" src="img/team-3.jpg" alt="">
+                      <div class="team-overlay">
+                          <div class="d-flex align-items-center justify-content-start">
+                              <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
+                              <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
+                              <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="bg-light text-center p-4">
+                      <h4 class="text-uppercase">John Brown</h4>
+                      <p class="m-0">Developer</p>
+                  </div>
+              </div>
+              <div class="team-item rounded overflow-hidden">
+                  <div class="position-relative">
+                      <img class="img-fluid w-100" src="img/team-4.jpg" alt="">
+                      <div class="team-overlay">
+                          <div class="d-flex align-items-center justify-content-start">
+                              <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
+                              <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
+                              <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="bg-light text-center p-4">
+                      <h4 class="text-uppercase">Paul Watson</h4>
+                      <p class="m-0">Marketer</p>
+                  </div>
+              </div>
+          </div>
       </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 col-md-4 col-lg-3">
-          <div class="team-block bottom">
-            <img src="img/team/1.jpg" class="img-responsive" alt="img">
-            <div class="team-content">
-              <ul class="list-unstyled">
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              </ul>
-              <span>manager</span>
-              <h4>Kimberly Tran</h4>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-md-4 col-lg-3">
-          <div class="team-block bottom">
-            <img src="img/team/2.jpg" class="img-responsive" alt="img">
-            <div class="team-content">
-              <ul class="list-unstyled">
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              </ul>
-              <span>manager</span>
-              <h4>Kimberly Tran</h4>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-6 col-md-4 col-lg-3">
-          <div class="team-block bottom">
-            <img src="img/team/3.jpg" class="img-responsive" alt="img">
-            <div class="team-content">
-              <ul class="list-unstyled">
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              </ul>
-              <span>manager</span>
-              <h4>Kimberly Tran</h4>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-6 col-md-4 col-lg-3">
-          <div class="team-block bottom">
-            <img src="img/team/4.jpg" class="img-responsive" alt="img">
-            <div class="team-content">
-              <ul class="list-unstyled">
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-              </ul>
-              <span>manager</span>
-              <h4>Kimberly Tran</h4>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </section>
+  </div>
+  <!-- Team End -->
 
   <!--- Blog Section -->
 
