--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
           <div class="owl-carousel team-carousel position-relative" style="padding-left: 30px;">
               <div class="team-item rounded overflow-hidden">
                   <div class="position-relative">
-                      <img class="img-fluid w-100" src="img/team-1.jpg" alt="">
+                      <img class="img-fluid w-100" src="img/.jpg" alt="">
                       <div class="team-overlay">
                           <div class="d-flex align-items-center justify-content-start">
                               <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
@@ -253,7 +253,7 @@
               </div>
               <div class="team-item rounded overflow-hidden">
                   <div class="position-relative">
-                      <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
+                      <img class="img-fluid w-100" src="img/.jpg" alt="">
                       <div class="team-overlay">
                           <div class="d-flex align-items-center justify-content-start">
                               <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
@@ -269,7 +269,7 @@
               </div>
               <div class="team-item rounded overflow-hidden">
                   <div class="position-relative">
-                      <img class="img-fluid w-100" src="img/team-3.jpg" alt="">
+                      <img class="img-fluid w-100" src="img/.jpg" alt="">
                       <div class="team-overlay">
                           <div class="d-flex align-items-center justify-content-start">
                               <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
@@ -285,7 +285,7 @@
               </div>
               <div class="team-item rounded overflow-hidden">
                   <div class="position-relative">
-                      <img class="img-fluid w-100" src="img/team-4.jpg" alt="">
+                      <img class="img-fluid w-100" src="img/.jpg" alt="">
                       <div class="team-overlay">
                           <div class="d-flex align-items-center justify-content-start">
                               <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
@@ -354,6 +354,40 @@
     </div>
   </div>
   <!--- end image -->
+
+  <!-- Testimonial Start -->
+  <div class="container-fluid py-5">
+      <div class="container py-5">
+          <h1 class="display-4 text-uppercase text-center mb-5">Our Client's Say</h1>
+          <div class="owl-carousel testimonial-carousel">
+              <div class="testimonial-item position-relative text-center rounded p-4">
+                  <img class="img-fluid rounded mx-auto my-4" src="img/testimonial-1.jpg" alt="">
+                  <h5 class="text-uppercase">Client Name</h5>
+                  <p class="text-uppercase">Profession</p>
+                  <p class="text-secondary">Tempor lorem dolor sea et ipsum, lorem justo kasd dolore vero eos. Lorem duo ipsum sea amet et clita dolor</p>
+              </div>
+              <div class="testimonial-item position-relative text-center rounded p-4">
+                  <img class="img-fluid rounded mx-auto my-4" src="img/testimonial-2.jpg" alt="">
+                  <h5 class="text-uppercase">Client Name</h5>
+                  <p class="text-uppercase">Profession</p>
+                  <p class="text-secondary">Tempor lorem dolor sea et ipsum, lorem justo kasd dolore vero eos. Lorem duo ipsum sea amet et clita dolor</p>
+              </div>
+              <div class="testimonial-item position-relative text-center rounded p-4">
+                  <img class="img-fluid rounded mx-auto my-4" src="img/testimonial-3.jpg" alt="">
+                  <h5 class="text-uppercase">Client Name</h5>
+                  <p class="text-uppercase">Profession</p>
+                  <p class="text-secondary">Tempor lorem dolor sea et ipsum, lorem justo kasd dolore vero eos. Lorem duo ipsum sea amet et clita dolor</p>
+              </div>
+              <div class="testimonial-item position-relative text-center rounded p-4">
+                  <img class="img-fluid rounded mx-auto my-4" src="img/testimonial-4.jpg" alt="">
+                  <h5 class="text-uppercase">Client Name</h5>
+                  <p class="text-uppercase">Profession</p>
+                  <p class="text-secondary">Tempor lorem dolor sea et ipsum, lorem justo kasd dolore vero eos. Lorem duo ipsum sea amet et clita dolor</p>
+              </div>
+          </div>
+      </div>
+  </div>
+  <!-- Testimonial End -->
 
   <!-- Footer -->
   <footer class="footer">
