--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 
         <div class="navbar-top">
           <a href="#" class="logo">
-            <img src="img/Mtendere_logo" width="74" height="24" alt="Adex home">
+            <img src="img/Mtendere_logo" width="74" height="24" alt="MTENDERE">
           </a>
 
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
@@ -124,7 +124,7 @@
 
       </nav>
 
-      <a href="#" class="btn btn-primary">Free Trial</a>
+      <a href="#" class="btn btn-primary">READ MORE</a>
 
       <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
         <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
@@ -265,7 +265,7 @@
     </div>
   </header> #header -->
 
-  <!-- Hero Section -->
+  <!-- Hero Section 
   <section id="hero" class="wow fadeIn">
     <div class="hero-container">
       <h1>Welcome to Mtendere Education Consult</h1>
