--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="hero-container">
       <h1>Welcome to Mtendere Education Consult</h1>
       <h2>Study Abroad.</h2>
-      <img src="img/1.jpg" alt="Hero Imgs">
+      <img src="" alt="Hero Imgs">
       <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
       <div class="btns">
         <a href="#"><i class="fa fa-apple fa-3x"></i> App Store</a>
