--- a/index.html
+++ b/index.html
@@ -122,10 +122,28 @@
       <img src="" alt="Hero Imgs">
       <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
       <div class="btns">
-        <a href="#"><i class="fa fa-apple fa-3x"></i> App Store</a>
-        <a href="#"><i class="fa fa-play fa-3x"></i> Google Play</a>
-        <a href="#"><i class="fa fa-windows fa-3x"></i> windows</a>
+        <a href="#"><i class="fa facebook fa-3x"></i> Facebook</a>
+        <a href="#"><i class="fa instagram fa-3x"></i> Google Play</a>
+        <a href="#"><i class="fa twitter-official fa-3x"></i> windows</a>
       </div>
+    </div>
+
+    <div class="mx-auto mb-5" style="width: 100%; max-width: 600px;">
+        <div class="input-group">
+            <div class="input-group-prepend">
+                <button class="btn btn-outline-light bg-white text-body px-4 dropdown-toggle" type="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">Courses</button>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">Courses 1</a>
+                    <a class="dropdown-item" href="#">Courses 2</a>
+                    <a class="dropdown-item" href="#">Courses 3</a>
+                </div>
+            </div>
+            <input type="text" class="form-control border-light" style="padding: 30px 25px;" placeholder="Keyword">
+            <div class="input-group-append">
+                <button class="btn btn-secondary px-4 px-lg-5">Search</button>
+            </div>
+        </div>
     </div>
   </section>
   <!-- #hero -->
@@ -167,6 +185,102 @@
       </div>
     </div>
   </section>
+
+  <!-- About Start -->
+  <div class="container-fluid py-5">
+    <div class="container py-5">
+        <div class="row">
+            <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 500px;">
+                <div class="position-relative h-100">
+                    <img class="position-absolute w-100 h-100" src="img/about.jpg" style="object-fit: cover;">
+                </div>
+            </div>
+            <div class="col-lg-7">
+                <div class="section-title position-relative mb-4">
+                    <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">About Us</h6>
+                    <h1 class="display-4">First Choice For Online Education Anywhere</h1>
+                </div>
+                <p>Tempor erat elitr at rebum at at clita aliquyam consetetur. Diam dolor diam ipsum et, tempor voluptua sit consetetur sit. Aliquyam diam amet diam et eos sadipscing labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit. Sanctus clita duo justo et tempor consetetur takimata eirmod, dolores takimata consetetur invidunt magna dolores aliquyam dolores dolore. Amet erat amet et magna</p>
+                <div class="row pt-3 mx-0">
+                    <div class="col-3 px-0">
+                        <div class="bg-success text-center p-4">
+                            <h1 class="text-white" data-toggle="counter-up">123</h1>
+                            <h6 class="text-uppercase text-white">Available<span class="d-block">Subjects</span></h6>
+                        </div>
+                    </div>
+                    <div class="col-3 px-0">
+                        <div class="bg-primary text-center p-4">
+                            <h1 class="text-white" data-toggle="counter-up">1234</h1>
+                            <h6 class="text-uppercase text-white">Online<span class="d-block">Courses</span></h6>
+                        </div>
+                    </div>
+                    <div class="col-3 px-0">
+                        <div class="bg-secondary text-center p-4">
+                            <h1 class="text-white" data-toggle="counter-up">123</h1>
+                            <h6 class="text-uppercase text-white">Skilled<span class="d-block">Instructors</span></h6>
+                        </div>
+                    </div>
+                    <div class="col-3 px-0">
+                        <div class="bg-warning text-center p-4">
+                            <h1 class="text-white" data-toggle="counter-up">1234</h1>
+                            <h6 class="text-uppercase text-white">Happy<span class="d-block">Students</span></h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
+  <!-- About End -->
+
+
+  <!-- Feature Start -->
+  <div class="container-fluid bg-image" style="margin: 90px 0;">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-7 my-5 pt-5 pb-lg-5">
+                <div class="section-title position-relative mb-4">
+                    <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Why Choose Us?</h6>
+                    <h1 class="display-4">Why You Should Start Learning with Us?</h1>
+                </div>
+                <p class="mb-4 pb-2">Aliquyam accusam clita nonumy ipsum sit sea clita ipsum clita, ipsum dolores amet voluptua duo dolores et sit ipsum rebum, sadipscing et erat eirmod diam kasd labore clita est. Diam sanctus gubergren sit rebum clita amet.</p>
+                <div class="d-flex mb-3">
+                    <div class="btn-icon bg-primary mr-4">
+                        <i class="fa fa-2x fa-graduation-cap text-white"></i>
+                    </div>
+                    <div class="mt-n1">
+                        <h4>Skilled Instructors</h4>
+                        <p>Labore rebum duo est Sit dolore eos sit tempor eos stet, vero vero clita magna kasd no nonumy et eos dolor magna ipsum.</p>
+                    </div>
+                </div>
+                <div class="d-flex mb-3">
+                    <div class="btn-icon bg-secondary mr-4">
+                        <i class="fa fa-2x fa-certificate text-white"></i>
+                    </div>
+                    <div class="mt-n1">
+                        <h4>International Certificate</h4>
+                        <p>Labore rebum duo est Sit dolore eos sit tempor eos stet, vero vero clita magna kasd no nonumy et eos dolor magna ipsum.</p>
+                    </div>
+                </div>
+                <div class="d-flex">
+                    <div class="btn-icon bg-warning mr-4">
+                        <i class="fa fa-2x fa-book-reader text-white"></i>
+                    </div>
+                    <div class="mt-n1">
+                        <h4>Online Classes</h4>
+                        <p class="m-0">Labore rebum duo est Sit dolore eos sit tempor eos stet, vero vero clita magna kasd no nonumy et eos dolor magna ipsum.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-5" style="min-height: 500px;">
+                <div class="position-relative h-100">
+                    <img class="position-absolute w-100 h-100" src="img/feature.jpg" style="object-fit: cover;">
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
+  <!-- Feature Start -->
 
   <!--  Testimony Section -->
   <section id="screenshots" class="padd-section text-center wow fadeInUp">
@@ -262,6 +376,146 @@
   <!-- img section -->
 
   <!-- end img section -->
+   <!-- Courses Start -->
+   <div class="container-fluid px-0 py-5">
+      <div class="row mx-0 justify-content-center pt-5">
+          <div class="col-lg-6">
+              <div class="section-title text-center position-relative mb-4">
+                  <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">Our Courses</h6>
+                  <h1 class="display-4">Checkout New Releases Of Our Courses</h1>
+              </div>
+          </div>
+      </div>
+      <div class="owl-carousel courses-carousel">
+          <div class="courses-item position-relative">
+              <img class="img-fluid" src="img/courses-1.jpg" alt="">
+              <div class="courses-text">
+                  <h4 class="text-center text-white px-3">Web design & development courses for beginners</h4>
+                  <div class="border-top w-100 mt-3">
+                      <div class="d-flex justify-content-between p-4">
+                          <span class="text-white"><i class="fa fa-user mr-2"></i>Jhon Doe</span>
+                          <span class="text-white"><i class="fa fa-star mr-2"></i>4.5 <small>(250)</small></span>
+                      </div>
+                  </div>
+                  <div class="w-100 bg-white text-center p-4" >
+                      <a class="btn btn-primary" href="detail.html">Course Detail</a>
+                  </div>
+              </div>
+          </div>
+          <div class="courses-item position-relative">
+              <img class="img-fluid" src="img/courses-2.jpg" alt="">
+              <div class="courses-text">
+                  <h4 class="text-center text-white px-3">Web design & development courses for beginners</h4>
+                  <div class="border-top w-100 mt-3">
+                      <div class="d-flex justify-content-between p-4">
+                          <span class="text-white"><i class="fa fa-user mr-2"></i>Jhon Doe</span>
+                          <span class="text-white"><i class="fa fa-star mr-2"></i>4.5 <small>(250)</small></span>
+                      </div>
+                  </div>
+                  <div class="w-100 bg-white text-center p-4" >
+                      <a class="btn btn-primary" href="detail.html">Course Detail</a>
+                  </div>
+              </div>
+          </div>
+          <div class="courses-item position-relative">
+              <img class="img-fluid" src="img/courses-3.jpg" alt="">
+              <div class="courses-text">
+                  <h4 class="text-center text-white px-3">Web design & development courses for beginners</h4>
+                  <div class="border-top w-100 mt-3">
+                      <div class="d-flex justify-content-between p-4">
+                          <span class="text-white"><i class="fa fa-user mr-2"></i>Jhon Doe</span>
+                          <span class="text-white"><i class="fa fa-star mr-2"></i>4.5 <small>(250)</small></span>
+                      </div>
+                  </div>
+                  <div class="w-100 bg-white text-center p-4" >
+                      <a class="btn btn-primary" href="detail.html">Course Detail</a>
+                  </div>
+              </div>
+          </div>
+          <div class="courses-item position-relative">
+              <img class="img-fluid" src="img/courses-4.jpg" alt="">
+              <div class="courses-text">
+                  <h4 class="text-center text-white px-3">Web design & development courses for beginners</h4>
+                  <div class="border-top w-100 mt-3">
+                      <div class="d-flex justify-content-between p-4">
+                          <span class="text-white"><i class="fa fa-user mr-2"></i>Jhon Doe</span>
+                          <span class="text-white"><i class="fa fa-star mr-2"></i>4.5 <small>(250)</small></span>
+                      </div>
+                  </div>
+                  <div class="w-100 bg-white text-center p-4" >
+                      <a class="btn btn-primary" href="detail.html">Course Detail</a>
+                  </div>
+              </div>
+          </div>
+          <div class="courses-item position-relative">
+              <img class="img-fluid" src="img/courses-5.jpg" alt="">
+              <div class="courses-text">
+                  <h4 class="text-center text-white px-3">Web design & development courses for beginners</h4>
+                  <div class="border-top w-100 mt-3">
+                      <div class="d-flex justify-content-between p-4">
+                          <span class="text-white"><i class="fa fa-user mr-2"></i>Jhon Doe</span>
+                          <span class="text-white"><i class="fa fa-star mr-2"></i>4.5 <small>(250)</small></span>
+                      </div>
+                  </div>
+                  <div class="w-100 bg-white text-center p-4" >
+                      <a class="btn btn-primary" href="detail.html">Course Detail</a>
+                  </div>
+              </div>
+          </div>
+          <div class="courses-item position-relative">
+              <img class="img-fluid" src="img/courses-6.jpg" alt="">
+              <div class="courses-text">
+                  <h4 class="text-center text-white px-3">Web design & development courses for beginners</h4>
+                  <div class="border-top w-100 mt-3">
+                      <div class="d-flex justify-content-between p-4">
+                          <span class="text-white"><i class="fa fa-user mr-2"></i>Jhon Doe</span>
+                          <span class="text-white"><i class="fa fa-star mr-2"></i>4.5 <small>(250)</small></span>
+                      </div>
+                  </div>
+                  <div class="w-100 bg-white text-center p-4" >
+                      <a class="btn btn-primary" href="detail.html">Course Detail</a>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div class="row justify-content-center bg-image mx-0 mb-5">
+          <div class="col-lg-6 py-5">
+              <div class="bg-white p-5 my-5">
+                  <h1 class="text-center mb-4">30% Off For New Students</h1>
+                  <form>
+                      <div class="form-row">
+                          <div class="col-sm-6">
+                              <div class="form-group">
+                                  <input type="text" class="form-control bg-light border-0" placeholder="Your Name" style="padding: 30px 20px;">
+                              </div>
+                          </div>
+                          <div class="col-sm-6">
+                              <div class="form-group">
+                                  <input type="email" class="form-control bg-light border-0" placeholder="Your Email" style="padding: 30px 20px;">
+                              </div>
+                          </div>
+                      </div>
+                      <div class="form-row">
+                          <div class="col-sm-6">
+                              <div class="form-group">
+                                  <select class="custom-select bg-light border-0 px-3" style="height: 60px;">
+                                      <option selected>Select A courses</option>
+                                      <option value="1">courses 1</option>
+                                      <option value="2">courses 1</option>
+                                      <option value="3">courses 1</option>
+                                  </select>
+                              </div>
+                          </div>
+                          <div class="col-sm-6">
+                              <button class="btn btn-primary btn-block" type="submit" style="height: 60px;">Sign Up Now</button>
+                          </div>
+                      </div>
+                  </form>
+              </div>
+          </div>
+      </div>
+  </div>
+  <!-- Courses End -->
 
   <!-- Portfolio Start -->
   <div class="container-fluid py-5">
