--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
         <div class="row">
           <div class="col-md-12 col-lg-4">
             <div class="footer-logo">
-              <a class="navbar-brand" href="#" image src="img/Mtendere_Logo"></a>
+              <a class="navbar-brand" href="#" image src="img/Mtendere_logo.png"></a>
               <p>www.mec.edu<br>
                 Mtendre Education Consult, Babaje Huse<br>
                 Off Mandala Road Area 3, Behind NBs<br>
